--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,9 +11,10 @@
         android:layout_height="200dp"
         android:columnCount="1"
         android:orientation="horizontal"
-        android:rowCount="2"
+        android:rowCount="4"
         tools:layout_editor_absoluteX="105dp"
-        tools:layout_editor_absoluteY="265dp">
+        tools:layout_editor_absoluteY="265dp"
+        tools:ignore="MissingConstraints">
 
         <TextView
             android:layout_columnWeight="1"
@@ -26,6 +27,11 @@
         <TextView
             android:layout_columnWeight="1"
             android:text="Contraseña:" />
+
+        <EditText
+            android:layout_height="35dp"
+            android:layout_columnWeight="1"/>
+
     </GridLayout>
 
 
