--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,30 +7,55 @@
     tools:context=".MainActivity">
 
     <GridLayout
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:id="@+id/login"
+        android:layout_width="360dp"
+        android:layout_height="210dp"
         android:columnCount="1"
         android:orientation="horizontal"
-        android:rowCount="4"
-        tools:layout_editor_absoluteX="105dp"
-        tools:layout_editor_absoluteY="265dp"
-        tools:ignore="MissingConstraints">
+        android:rowCount="2"
+        android:background="@color/loginbackground"
+
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        >
 
         <TextView
             android:layout_columnWeight="1"
+            android:layout_width="120dp"
+            android:padding="8dp"
             android:text="Usuario:" />
 
         <EditText
-            android:layout_height="35dp"
-            android:layout_columnWeight="1"/>
+            android:id="@+id/user"
+            android:layout_columnWeight="1"
+            android:layout_width="120dp"
+            android:padding="7dp" />
 
         <TextView
             android:layout_columnWeight="1"
+            android:layout_width="120dp"
+            android:padding="8dp"
             android:text="Contraseña:" />
 
         <EditText
-            android:layout_height="35dp"
-            android:layout_columnWeight="1"/>
+            android:id="@+id/password"
+            android:inputType="textPassword"
+            android:layout_columnWeight="1"
+            android:layout_width="120dp"
+            android:padding="7dp" />
+
+        <Button
+            android:id="@+id/loginButton"
+            style="?android:attr/borderlessButtonStyle"
+            android:layout_width="321dp"
+            android:layout_height="wrap_content"
+            android:layout_columnWeight="1"
+            android:background="@color/loginbutton"
+            android:layout_margin="7dp"
+            android:text="login" />
+
 
     </GridLayout>
 
