--- a/app/src/main/res/layout/activity_menu_bd.xml
+++ b/app/src/main/res/layout/activity_menu_bd.xml
@@ -13,15 +13,13 @@
         android:rowCount="2"
         android:columnCount="3"
         android:orientation="horizontal">
-        <TextView android:layout_columnWeight="1" android:text="Celda 1.1" />
-        <TextView android:layout_columnWeight="1" android:text="Celda 1.2" />
-        <TextView android:layout_columnWeight="1" android:text="Celda 1.3" />
-        <TextView android:layout_columnWeight="1" android:text="Celda 2.1" />
-        <TextView android:layout_columnWeight="1" android:text="Celda 2.2" />
-        <TextView android:layout_columnWeight="1" android:text="Celda 2.3" />
-        <TextView android:layout_columnWeight="1" android:text="Celda doble de ancho 3.1"
-            android:layout_columnSpan="2" />
-        <TextView android:layout_columnWeight="1" android:text="Celda 3.2" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:listitem="@layout/recycler_menu"/>
+
     </GridLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
