--- a/app/src/main/res/layout/activity_menu_bd.xml
+++ b/app/src/main/res/layout/activity_menu_bd.xml
@@ -6,20 +6,23 @@
     android:layout_height="match_parent"
     tools:context="com.liceolapaz.des.tpp.menuBD">
 
-    <GridLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
+    <TextView
+        android:id="@+id/contadorJugadores"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:rowCount="2"
-        android:columnCount="3"
-        android:orientation="horizontal">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:textAlignment="viewEnd"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/recyclerJugadores"
+        tools:layout_editor_absoluteX="0dp" />
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            tools:listitem="@layout/recycler_menu"/>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerJugadores"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        app:layout_constraintTop_toBottomOf="@+id/contadorJugadores"
+         />
 
-    </GridLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
