--- a/app/src/main/res/layout/jugador_rv.xml
+++ b/app/src/main/res/layout/jugador_rv.xml
@@ -1,34 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <GridLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:rowCount="4"
-    android:columnCount="4"
-    android:orientation="horizontal">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:columnCount="4"
+        android:orientation="horizontal"
+        android:rowCount="4"
+        app:layout_constraintTop_toTopOf="parent">
 
-    <TextView
-        android:id="@+id/tvNombre"
-        android:layout_columnWeight="1"
-        android:layout_columnSpan="2"/>
+        <TextView
+            android:id="@+id/tvNombre"
+            android:layout_columnSpan="2"
+            android:layout_columnWeight="1"
+            tools:text="Nombre"/>
 
-    <TextView
-        android:id="@+id/tvPosicion"
-        android:layout_columnWeight="1" />
+        <TextView
+            android:id="@+id/tvPosicion"
+            android:layout_columnWeight="1"
+            tools:text="Posicion"/>
 
-    <TextView
-        android:id="@+id/tvPrecio"
-        android:layout_columnWeight="1"
-        android:layout_columnSpan="2"
-        />
+        <TextView
+            android:id="@+id/tvPrecio"
+            android:layout_columnSpan="2"
+            android:layout_columnWeight="1"
+            tools:text="Precio"/>
 
-    <TextView
-        android:id="@+id/tvPuntos"
-        android:layout_columnWeight="1"/>
+        <TextView
+            android:id="@+id/tvPuntos"
+            android:layout_columnWeight="1"
+            tools:text="Puntos"/>
 
-</GridLayout>
+    </GridLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
