--- a/app/src/main/res/layout/activity_menu_bd.xml
+++ b/app/src/main/res/layout/activity_menu_bd.xml
@@ -1,28 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="horizontal"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.liceolapaz.des.tpp.menuBD">
 
+
     <TextView
-        android:id="@+id/contadorJugadores"
-        android:layout_width="match_parent"
+        android:id="@+id/contador"
         android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:textAlignment="viewEnd"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/recyclerJugadores"
-        tools:layout_editor_absoluteX="0dp" />
+        android:layout_width="match_parent"
+        android:textAlignment="textEnd"
+        tools:text="Hay tantos jugadores"
+        app:layout_constraintTop_toTopOf="parent"/>
+
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerJugadores"
+        android:id="@+id/recyclerJugador"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        app:layout_constraintTop_toBottomOf="@+id/contadorJugadores"
-         />
+        android:layout_marginTop="20dp" />
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</FrameLayout>
