Logica terminada faltan estilos

--- a/app/src/main/res/layout/modificar_jugador.xml
+++ b/app/src/main/res/layout/modificar_jugador.xml
@@ -61,7 +61,7 @@
             android:text="Posicion: " />
 
         <Spinner
-            android:id="@+id/editTextPosiciones"
+            android:id="@+id/SpinnerPosiciones"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
@@ -93,7 +93,7 @@
             android:id="@+id/BtnEliminar"
             android:layout_width="wrap_content"
             android:layout_height="70dp"
-            android:text="Aceptar" />
+            android:text="Eliminar" />
 
         <Space android:layout_width="10dp" android:layout_height="match_parent"/>
 
