--- a/app/src/main/res/layout/activity_anadir_jugador.xml
+++ b/app/src/main/res/layout/activity_anadir_jugador.xml
@@ -7,14 +7,15 @@
     tools:context=".AnadirJugador">
 
     <LinearLayout
+        android:id="@+id/linearLayout2"
         android:layout_width="379dp"
         android:layout_height="378dp"
         android:layout_margin="20dp"
-        android:padding="25dp"
+        android:background="@color/loginbackground"
         android:orientation="vertical"
+        android:padding="25dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:background="@color/loginbackground"
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
@@ -25,10 +26,10 @@
 
         <EditText
             android:id="@+id/txtCodigo"
-            android:focusable="false"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_columnWeight="1" />
+            android:layout_columnWeight="1"
+            android:focusable="false" />
 
         <TextView
             android:layout_width="match_parent"
@@ -81,20 +82,19 @@
     <LinearLayout
         android:layout_width="368dp"
         android:layout_height="114dp"
-        android:layout_margin="20dp"
         android:orientation="horizontal"
         android:padding="25dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.372"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.658">
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
 
         <Button
             android:id="@+id/aceptarBtn"
             android:layout_width="wrap_content"
             android:layout_height="70dp"
+            android:startColor="@color/loginbackground"
+            android:endColor="#230676"
             android:text="Aceptar" />
 
         <Button
@@ -102,6 +102,9 @@
             android:layout_width="wrap_content"
             android:layout_height="70dp"
             android:layout_marginLeft="80dp"
+            android:startColor="@color/loginbackground"
+            android:endColor="#230676"
+            android:radius="3dp"
             android:text="Cancelar" />
     </LinearLayout>
 
