--- a/app/src/main/res/layout/activity_menu_bd.xml
+++ b/app/src/main/res/layout/activity_menu_bd.xml
@@ -18,6 +18,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAlignment="textEnd"
+        android:background="@color/loginbackground"
         app:layout_constraintBottom_toTopOf="@id/recyclerJugador"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -29,6 +30,7 @@
         android:id="@+id/recyclerJugador"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:background="@color/loginbackground"
         app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
